# mem-lite

./: .gitignore  README.md  main.py  pyproject.toml
documents/: prd-unified.md
documents/prd/: Key_Numbers_to_Keep_in.txt  claude-mem-lite-architecture.md  claude-mem-lite-implementation-plan.md  prd-amendments-phase0-phase2.md  prd-amendments-phase3.md  prd-amendments-phase4.md  prd-amendments-phase5.md  prd-amendments-phase7.md  prd-amendments-phase8.md  prd-amendments-phase9.md  prd-phase0-storage-layer-v2.md  prd-phase1-hooks-capture-v3.md  prd-phase2-ast-tracker-v2.md  prd-phase3-worker-compression-v1.md  prd-phase4-embeddings-search-v1.md  prd-phase5-context-injection-v1.md  prd-phase6-learnings-engine-v2.md  prd-phase7-eval-framework-v1.md  prd-phase8-cli-reports-v1.md  prd-phase9-hardening-v1.md
src/claude_mem_lite/: config.py
src/claude_mem_lite/ast_tracker/: __init__.py  call_graph.py  diff.py  extractor.py  mermaid.py  types.py
src/claude_mem_lite/cli/: compress_cmd.py  eval_cmd.py  install.py  learnings_cmd.py  main.py  mermaid_cmd.py  prune_cmd.py  report.py  search_cmd.py  status_cmd.py
src/claude_mem_lite/context/: builder.py  estimator.py
src/claude_mem_lite/eval/: __init__.py  benchmark.py  evaluator.py  models.py  prompts.py  queries.py
src/claude_mem_lite/hooks/: capture.py  cleanup.py  context.py  summary.py
src/claude_mem_lite/learnings/: __init__.py  engine.py  healer.py  prompts.py
src/claude_mem_lite/logging/: logger.py
src/claude_mem_lite/search/: __init__.py  embedder.py  hybrid.py  lance_store.py
src/claude_mem_lite/storage/: migrations.py  models.py  sqlite_store.py
src/claude_mem_lite/worker/: __init__.py  compressor.py  exceptions.py  lifecycle.py  processor.py  prompts.py  server.py  summarizer.py
tests/: conftest.py  test_ast_call_graph.py  test_ast_diff.py  test_ast_extractor.py  test_ast_integration.py  test_ast_mermaid.py  test_cli.py  test_compressor.py  test_config.py  test_context_builder.py  test_eval.py  test_hardening.py  test_hooks.py  test_install.py  test_learnings.py  test_logger.py  test_search.py  test_server.py  test_storage.py  test_summarizer.py  test_worker.py
