[project]
name = "mem-lite"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "fastapi>=0.128",
    "uvicorn[standard]>=0.30",
    "anthropic>=0.78",
    "aiosqlite>=0.22",
    "httpx>=0.27",
]

[project.scripts]
claude-mem = "claude_mem_lite.cli.install:main"
claude-mem-worker = "claude_mem_lite.worker.lifecycle:cli_main"

[project.optional-dependencies]
dev = [
    "bandit>=1.9.3",
    "interrogate>=1.7.0",
    "mypy>=1.19.1",
    "pip-audit>=2.10.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "radon>=6.0.1",
    "ruff>=0.14.14",
    "vulture>=2.14",
]

# -----------------------------------------------------------------------------
# RUFF - Linting & Formatting (replaces flake8, isort, black, pyupgrade)
# -----------------------------------------------------------------------------
[tool.ruff]
target-version = "py312"
line-length = 100
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    ".mypy_cache",
    ".pytest_cache",
    "build",
    "dist",
    "*.egg-info",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "C4",     # flake8-comprehensions
    "DTZ",    # flake8-datetimez
    "T10",    # flake8-debugger
    "EM",     # flake8-errmsg
    "ISC",    # flake8-implicit-str-concat
    "ICN",    # flake8-import-conventions
    "PIE",    # flake8-pie
    "PT",     # flake8-pytest-style
    "Q",      # flake8-quotes
    "RSE",    # flake8-raise
    "RET",    # flake8-return
    "SLF",    # flake8-self
    "TCH",    # flake8-type-checking
    "ARG",    # flake8-unused-arguments
    "PTH",    # flake8-use-pathlib
    "PL",     # Pylint
    "TRY",    # tryceratops
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",    # Line too long (handled by formatter)
    "B008",    # Function call in default argument (needed for FastAPI Depends)
    "B904",    # raise-without-from-inside-except (too noisy)
    "PLR0913", # Too many arguments
    "PLR2004", # Magic value comparison
    "TRY003",  # Long exception messages
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",    # assert allowed in tests
    "ARG",     # Unused arguments (fixtures)
    "PLR2004", # Magic values in tests
]
"__init__.py" = ["F401"]  # Unused imports in __init__
"src/claude_mem_lite/hooks/*.py" = ["PLC0415"]  # Deferred imports for fast hook exit paths
"src/claude_mem_lite/worker/*.py" = ["PLC0415"]  # Deferred imports for worker modules

[tool.ruff.lint.isort]
known-first-party = ["claude_mem_lite"]
force-single-line = false
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# -----------------------------------------------------------------------------
# MYPY - Type Checking
# -----------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_ignores = true
warn_unused_configs = true
warn_redundant_casts = true
ignore_missing_imports = true
strict_optional = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
show_column_numbers = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# -----------------------------------------------------------------------------
# PYTEST - Testing
# -----------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = [
    "tests",
]
pythonpath = ["src"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
python_classes = ["Test*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests",
    "unit: marks unit tests",
]
asyncio_mode = "auto"
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "-ra",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

# -----------------------------------------------------------------------------
# COVERAGE - Test Coverage (used by pytest-cov)
# -----------------------------------------------------------------------------
[tool.coverage.run]
source = [
    ".",
]
branch = true
parallel = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/migrations/*",
    "*/.venv/*",
]

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 70
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
    "@abstractmethod",
    "@abc.abstractmethod",
]
precision = 2

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.json]
output = "coverage.json"

# -----------------------------------------------------------------------------
# BANDIT - Security Scanner
# -----------------------------------------------------------------------------
[tool.bandit]
exclude_dirs = [
    "tests",
    ".venv",
    "venv",
    ".git",
]
skips = [
    "B101",  # assert_used - acceptable in tests
    "B104",  # hardcoded_bind_all_interfaces - often intentional
]

# -----------------------------------------------------------------------------
# VULTURE - Dead Code Detection
# -----------------------------------------------------------------------------
[tool.vulture]
min_confidence = 80
paths = [
    ".",
    "tests",
]
exclude = [
    ".venv/",
    "venv/",
    "*migrations*",
    "*.egg-info",
]
ignore_decorators = [
    "@app.route",
    "@router.*",
    "@pytest.fixture",
    "@pytest.mark.*",
    "@property",
    "@staticmethod",
    "@classmethod",
    "@abstractmethod",
    "@*.setter",
    "@*.deleter",
]
ignore_names = [
    "visit_*",
    "test_*",
    "setUp",
    "tearDown",
    "setUpClass",
    "tearDownClass",
    "_*",
]

# -----------------------------------------------------------------------------
# INTERROGATE - Docstring Coverage
# -----------------------------------------------------------------------------
[tool.interrogate]
ignore-init-method = true
ignore-init-module = true
ignore-magic = true
ignore-semiprivate = false
ignore-private = true
ignore-property-decorators = true
ignore-module = false
ignore-nested-functions = true
ignore-nested-classes = true
ignore-setters = true
fail-under = 80
exclude = [
    "setup.py",
    "docs",
    "build",
    "tests",
    ".venv",
    "migrations",
]
verbose = 0
quiet = false
color = true

# -----------------------------------------------------------------------------
# RADON - Complexity Metrics (CLI only, no pyproject.toml config)
# -----------------------------------------------------------------------------

# -----------------------------------------------------------------------------
# PIP-AUDIT - Dependency Vulnerability Scanner (CLI only)
# -----------------------------------------------------------------------------

# =============================================================================
# EXAMPLE COMMANDS
# =============================================================================
# Linting:     uv run ruff check . --fix
# Formatting:  uv run ruff format .
# Type check:  uv run mypy .
# Tests:       uv run pytest
# Coverage:    uv run pytest --cov --cov-report=html
# Security:    uv run bandit -c pyproject.toml -r .
# Dead code:   uv run vulture .
# Docstrings:  uv run interrogate -v .
# Complexity:  uv run radon cc . -a -s
# Deps audit:  uv run pip-audit --strict
# =============================================================================
